--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue3-glassmorphism",
-  "version": "0.1.5",
+  "version": "0.1.9",
   "author": "Hunlongyu",
   "description": "vue3 glassmorphism, vue3 透明高斯模糊背景.",
   "keywords": [
@@ -29,7 +29,8 @@
   },
   "dependencies": {
     "vue": "^3.0.5",
-    "vue-slider-component": "^4.0.0-beta.3"
+    "vue-slider-component": "^4.0.0-beta.3",
+    "vue3-glassmorphism": "^0.1.8"
   },
   "devDependencies": {
     "@types/node": "^14.14.31",
