--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue3-glassmorphism",
-  "version": "0.1.9",
+  "version": "0.2.0",
   "author": "Hunlongyu",
   "description": "vue3 glassmorphism, vue3 透明高斯模糊背景.",
   "keywords": [
@@ -22,6 +22,11 @@
     }
   },
   "typings": "./dist/types.d.ts",
+  "homepage": "https://hunlongyu.github.io/vue3-glassmorphism/",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Hunlongyu/vue3-glassmorphism.git"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -29,8 +34,7 @@
   },
   "dependencies": {
     "vue": "^3.0.5",
-    "vue-slider-component": "^4.0.0-beta.3",
-    "vue3-glassmorphism": "^0.1.8"
+    "vue-slider-component": "^4.0.0-beta.3"
   },
   "devDependencies": {
     "@types/node": "^14.14.31",
